# Recommendation_System

./: .gitignore  README.md  pyproject.toml
analysis/: EDA.ipynb
models/: animes.pkl  top_5_similar.pkl
website/: app.py
